--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@
         </a>
       </div>
       <div>
+        <!--C -->
+        <a href="./CERTIFICADOS/C Tutorial.pdf.pdf" target="_blank">
+          <img alt="Certificado C Tutorial" src="./img/c-c.png">
+
+        </a>
+      </div>
+      <div>
         <!--CSS -->
         <a href="./CERTIFICADOS/CSS Fundamentals.pdf" target="_blank">
           <img alt="Certificado CSS Fundamentals" src="./img/c-css.png">
@@ -209,23 +216,19 @@
 
         </a>
       </div>
-      
+
       <!--OFFICE -->
-      <!--
-         <div>
-        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
-          <img alt="Certificado Pacote Office" src="./img/c-office.png">
+      <div>
+        <a href="./CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg" target="_blank">
+          <img alt="Assitente Administrativo com Informatica " src="./img/c-aa.png">
         </a>
-      </div> 
-        -->
+      </div>
       <!--ACCESS -->
-      <!--
-          <div>
-        <a href="https://www.freecodecamp.org/certification/jff/responsive-web-design" target="_blank">
+      <div>
+        <a href="./CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg" target="_blank">
           <img alt="Certificado Aperfeiçoamento Profissional Access" src="./img/c-access.png">
         </a>
       </div>
-    -->
     </section><br>
     <button type="button" class="btn-light btn btn-lg  bio" data-toggle="modal" data-target="#modalcert">Ver Todos
     </button>
@@ -241,15 +244,28 @@
             </button>
           </div>
           <div class="modal-body">
-            <div class="row"><img src="./img/c-css.png"><a href="./CERTIFICADOS/CSS Fundamentals.pdf">CSS Fundamentals</a></div>
-            <div class="row"><img src="./img/c-js.png"><a href="./CERTIFICADOS/JavaScript Tutorial.pdf">JavaScript
+              <div class="row"><img src="./img/c-c.png"><a href="./CERTIFICADOS/C Tutorial.pdf">
+                C Tutorial</a></div>
+            <div class="row"><img src="./img/c-css.png"><a href="./CERTIFICADOS/CSS Fundamentals.pdf">
+                CSS Fundamentals</a></div>
+            <div class="row"><img src="./img/c-js.png"><a href="./CERTIFICADOS/JavaScript Tutorial.pdf">
+                JavaScript
                 Tutorial</a></div>
-            <div class="row"><img src="./img/c-php.png"><a href="./CERTIFICADOS/PHP Tutorial.pdf">PHP Tutorial</a></div>
-            <div class="row"><img src="./img/c-sql.png"><a href="./CERTIFICADOS/SQL Fundamentals.pdf">SQL Fundamentals</a></div>
-            <div class="row"><img src="./img/c-wdr.png"><a href="https://www.freecodecamp.org/certification/jff/responsive-web-design">Web
-                Design Responsive</a></div>
+            <div class="row"><img src="./img/c-php.png"><a href="./CERTIFICADOS/PHP Tutorial.pdf">
+                PHP Tutorial</a></div>
+            <div class="row"><img src="./img/c-sql.png"><a href="./CERTIFICADOS/SQL Fundamentals.pdf">
+                SQL Fundamentals</a></div>
+            <div class="row"><img src="./img/c-wdr.png"><a href="https://www.freecodecamp.org/certification/jff/responsive-web-design">
+                Web Design Responsive</a></div>
+                
             <div class="row"><img src="./img/c-cisco.png"><a href="./CERTIFICADOS/IT Essentials Certficado.pdf">IT
-                Essentials - Certificado </a><a href="./CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
+              Essentials - Certificado</a><a href="./CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
+            <div class="row"><img src="./img/c-aa.png"><a href="./CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg.jpeg">
+                Assistente Administrativo - Certificado </a><a href="./CERTIFICADOS/Administração com Informatica Basica - Conteudo Programatico.jpeg">
+                - Conteudo</a></div>
+            <div class="row"><img src="./img/c-access.png"><a href="./CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg">Aperfeiçoamento
+                Access - Certificado </a><a href="./CERTIFICADOS/Aperfeiçoamento Access - Conteudo Programatico.jpeg"> - Conteudo</a></div>
+
           </div>
         </div>
       </div>
