--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
     </section>
     <section class="jcert">
       <div>
-       
+        <!--HTML-->
+        <a href="./CERTIFICADOS/HTML Fundamentals.pdf" target="_blank">
+          <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
+        </a>
       </div>
       <div>
         <!--JAVASCRIPT -->
