--- a/index.html
+++ b/index.html
@@ -166,41 +166,41 @@
     <section class="jcert">
       <div>
         <!--HTML-->
-        <a href="./CERTIFICADOS/HTML Fundamentals.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/HTML Fundamentals.pdf" target="_blank">
           <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
         </a>
       </div>
       <div>
         <!--JAVASCRIPT -->
-        <a href="./CERTIFICADOS/JavaScript Tutorial.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/JavaScript Tutorial.pdf" target="_blank">
           <img alt="Certificado JavaScript Tutorial" src="./img/c-js.png">
 
         </a>
       </div>
       <div>
         <!--PHP -->
-        <a href="./CERTIFICADOS/PHP Tutorial.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/PHP Tutorial.pdf" target="_blank">
           <img alt="Certificado PHP Tutorial" src="./img/c-php.png">
 
         </a>
       </div>
       <div>
         <!--C -->
-        <a href="./CERTIFICADOS/C Tutorial.pdf.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/C Tutorial.pdf.pdf" target="_blank">
           <img alt="Certificado C Tutorial" src="./img/c-c.png">
 
         </a>
       </div>
       <div>
         <!--CSS -->
-        <a href="./CERTIFICADOS/CSS Fundamentals.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/CSS Fundamentals.pdf" target="_blank">
           <img alt="Certificado CSS Fundamentals" src="./img/c-css.png">
 
         </a>
       </div>
       <div>
         <!--SQL -->
-        <a href="./CERTIFICADOS/SQL Fundamentals.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/SQL Fundamentals.pdf" target="_blank">
           <img alt="Certificado SQL Fundamentals" src="./img/c-sql.png">
 
         </a>
@@ -214,7 +214,7 @@
       </div>
       <!--ITE CISCO -->
       <div>
-        <a href="./CERTIFICADOS/IT Essentials Certficado.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/IT Essentials Certficado.pdf" target="_blank">
           <img alt="IT Essentials" src="./img/c-cisco.png">
 
         </a>
@@ -222,13 +222,13 @@
 
       <!--OFFICE -->
       <div>
-        <a href="./CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg" target="_blank">
+        <a href="./1/CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg" target="_blank">
           <img alt="Assitente Administrativo com Informatica " src="./img/c-aa.png">
         </a>
       </div>
       <!--ACCESS -->
       <div>
-        <a href="./CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg" target="_blank">
+        <a href="./1/CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg" target="_blank">
           <img alt="Certificado Aperfeiçoamento Profissional Access" src="./img/c-access.png">
         </a>
       </div>
@@ -247,31 +247,31 @@
             </button>
           </div>
           <div class="modal-body">
-            <div class="row"><img src="./img/c-c.png"><a href="./CERTIFICADOS/C Tutorial.pdf">
+            <div class="row"><img src="./img/c-c.png"><a href="./1/CERTIFICADOS/C Tutorial.pdf">
                 C Tutorial</a></div>
-            <div class="row"><img src="./img/c-css.png"><a href="./CERTIFICADOS/CSS Fundamentals.pdf">
+            <div class="row"><img src="./img/c-css.png"><a href="./1/CERTIFICADOS/CSS Fundamentals.pdf">
                 CSS Fundamentals</a></div>
-            <div class="row"><img src="./img/c-js.png"><a href="./CERTIFICADOS/JavaScript Tutorial.pdf">
+            <div class="row"><img src="./img/c-js.png"><a href="./1/CERTIFICADOS/JavaScript Tutorial.pdf">
                 JavaScript
                 Tutorial</a></div>
-            <div class="row"><img src="./img/c-php.png"><a href="./CERTIFICADOS/PHP Tutorial.pdf">
+            <div class="row"><img src="./img/c-php.png"><a href="./1/CERTIFICADOS/PHP Tutorial.pdf">
                 PHP Tutorial</a></div>
-            <div class="row"><img src="./img/c-sql.png"><a href="./CERTIFICADOS/SQL Fundamentals.pdf">
+            <div class="row"><img src="./img/c-sql.png"><a href="./1/CERTIFICADOS/SQL Fundamentals.pdf">
                 SQL Fundamentals</a></div>
             <div class="row"><img src="./img/c-wdr.png"><a
                 href="https://www.freecodecamp.org/certification/jff/responsive-web-design">
                 Web Design Responsive</a></div>
 
-            <div class="row"><img src="./img/c-cisco.png"><a href="./CERTIFICADOS/IT Essentials Certficado.pdf">IT
-                Essentials - Certificado</a><a href="./CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
+            <div class="row"><img src="./img/c-cisco.png"><a href="./1/CERTIFICADOS/IT Essentials Certficado.pdf">IT
+                Essentials - Certificado</a><a href="./1/CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
             <div class="row"><img src="./img/c-aa.png"><a
-                href="./CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg.jpeg">
+                href="./1/CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg.jpeg">
                 Assistente Administrativo - Certificado </a><a
-                href="./CERTIFICADOS/Administração com Informatica Basica - Conteudo Programatico.jpeg">
+                href="./1/CERTIFICADOS/Administração com Informatica Basica - Conteudo Programatico.jpeg">
                 - Conteudo</a></div>
             <div class="row"><img src="./img/c-access.png"><a
-                href="./CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg">Aperfeiçoamento
-                Access - Certificado </a><a href="./CERTIFICADOS/Aperfeiçoamento Access - Conteudo Programatico.jpeg"> -
+                href="./1/CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg">Aperfeiçoamento
+                Access - Certificado </a><a href="./1/CERTIFICADOS/Aperfeiçoamento Access - Conteudo Programatico.jpeg"> -
                 Conteudo</a></div>
 
           </div>
@@ -303,7 +303,7 @@
           <p>Manipulando DOM com algumas propriedades simples muito utilizadas em JavaScript juntamente com jQuery e
             Bootstrap.</p>
           <br>
-          <p><br><a target="_blank" href="./PROJETOS/JS/index.html"
+          <p><br><a target="_blank" href="./1/PROJETOS/JS/index.html"
               class="gradiente btn btn-primary btn-block">Abrir</a>
           </p>
         </div>
@@ -315,7 +315,7 @@
           <p>Utilizando C em 30+ mini projetos, utilizando Vetores, Matrizes, Struct e bibliotecas para execução de
             funções especificas.</p>
           <br><br>
-          <p><a href="./PROJETOS/APA/APA.zip" class="gradiente btn btn-primary btn-block">Abrir</a>
+          <p><a href="./1/PROJETOS/APA/APA.zip" class="gradiente btn btn-primary btn-block">Abrir</a>
           </p>
         </div>
       </div>
@@ -326,7 +326,7 @@
           <p>A vingança da DP é um jogo baseado em JavaScript estilo mata-mosca em homenagem a alguns professores da
             FATEC - Americana</p>
           <br><br>
-          <p><a href="./PROJETOS/DPREVANGE/index.html" class="gradiente btn btn-primary btn-block">Abrir</a>
+          <p><a href="./1/PROJETOS/DPREVANGE/index.html" class="gradiente btn btn-primary btn-block">Abrir</a>
           </p>
         </div>
       </div>
