index.html update

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <section class="jcert">
       <div>
         <!--HTML-->
-4        <a href="./1/CERTIFICADOS/HTML Fundamentals.pdf" target="_blank">
+        <a href="./1/CERTIFICADOS/HTML Fundamentals.pdf" target="_blank">
           <img alt="Certificado HTML Fundamentals" src="./img/c-html.png">
         </a>
       </div>
