unselect level fix

--- a/1/PROJETOS/DPREVANGE/index.html
+++ b/1/PROJETOS/DPREVANGE/index.html
@@ -31,7 +31,7 @@
 					<div class="d-flex justify-content-center">
 						<div class="mb-2">
 							<select  class="form-control " id="nivel">
-								<option value="">-- Nível --</option>
+								<option value="">NIVEL</option>
 								<option value="geek">Geek</option>
 								<option value="nerd">Nerd</option>
 								<option value="chucknorris">Chuck Norris</option>
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col">
 						<div class="d-flex justify-content-center">
-							<button type="button" class="btn btn-danger  / ,,lçl/çok[" onclick="select('jogar')">Iniciar Jogo</button>
+							<button type="button" class="btn btn-danger " onclick="select('jogar')">Iniciar Jogo</button>
 						</div>
 					</div>
 			</div>
