--- a/index.html
+++ b/index.html
@@ -263,16 +263,16 @@
                 Web Design Responsive</a></div>
 
             <div class="row"><img src="./img/c-cisco.png"><a href="./1/CERTIFICADOS/IT Essentials Certficado.pdf">IT
-                Essentials - Certificado</a><a href="./1/CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
+                Essentials </a><a href="./1/CERTIFICADOS/IT Essentials Carta.pdf"> - Carta</a></div>
             <div class="row"><img src="./img/c-aa.png"><a
                 href="./1/CERTIFICADOS/Administração com Informatica Basica - Certificado.jpeg.jpeg">
-                Assistente Administrativo - Certificado </a><a
+                Assistente Administrativo </a><a
                 href="./1/CERTIFICADOS/Administração com Informatica Basica - Conteudo Programatico.jpeg">
-                - Conteudo</a></div>
+                - Carta</a></div>
             <div class="row"><img src="./img/c-access.png"><a
                 href="./1/CERTIFICADOS/Aperfeiçoamento Access - Certificado.jpeg">Aperfeiçoamento
-                Access - Certificado </a><a href="./1/CERTIFICADOS/Aperfeiçoamento Access - Conteudo Programatico.jpeg"> -
-                Conteudo</a></div>
+                Access </a><a href="./1/CERTIFICADOS/Aperfeiçoamento Access - Conteudo Programatico.jpeg"> -
+                Carta</a></div>
 
           </div>
         </div>
