--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </figure>
         </div>
         <div class="col-xs-12 col-md-7">
-          <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos e uma linda esposa.
+          <p>Meu nome é Joelson Felipe Firmino, tenho 2 lindos filhos.
             <br>Sou um profissional competente e de confiança, comprometido com o trabalho de qualidade.
             <br>Tambem versátil na resolução de problemas maximizando recursos.
             <br>Muito entusiasmado, confiável e auto motivado.
