--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             -moz-transform: scaleX(-1);
             -o-transform: scaleX(-1);
             -webkit-transform: scaleX(-1);
-            transform: scaleX(-1);" src="./img/minhafoto.jpg" class="figure-img img-fluid rounded"
+            transform: scaleX(-1);" src="./img/minhafoto.png" class="figure-img img-fluid rounded"
               alt="Uma foto minha bem bonita.">
           </figure>
         </div>
